gstdecodebin3: assertion failed: (candidate->is_update || dbin->output_collection == NULL)") at ../glib/glib/gtestutils.c:3331
Describe your issue
Intermittent assertion crash on when setting next URL to play next song.
I can reproduce this issue with 1.24.6, and so can 3 other users.
Expected Behavior
No crash.
Observed Behavior
Crash.
Setup
- Operating System: Linux
- Device: Computer
- GStreamer Version: 1.24.6
- Command line:
Steps to reproduce the bug
- open terminal
- type
command
How reproducible is the bug?
Can't consistently reproduce, but I suspect it occurs when setting the uri to the same uri as the current song playing, playing the same track on repeat, or playing one track switching to another, than switching back to the first using gapless playback.
I'm still trying to reproduce it again with GST_DEBUG=5, I'll attach gstreamer debug log if I can reproduce it again.
Screenshots if relevant
Solutions you have tried
Related non-duplicate issues
Additional Information
https://github.com/strawberrymusicplayer/strawberry/issues/1515